syntax = "proto3";
package pb;
option go_package = "internal/pb";


message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc Login(LoginRequest) returns (LoginResponse);
}
